[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latence"
version = "0.1.0"
description = "Audio attention prediction via brain-model distillation from TRIBE v2"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",

    # Audio
    "librosa>=0.10",
    "soundfile>=0.12",

    # Brain model + training utils
    "transformers>=4.35",
    "accelerate>=0.24",
    "nilearn>=0.10",
    "nibabel>=5.0",

    # API
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0.6",

    # Utils
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "scikit-learn>=1.3",

    # Inference
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "ipykernel>=6.0",
]

[project.scripts]
latence-train     = "scripts.train:main"
latence-evaluate  = "scripts.evaluate:main"
latence-benchmark = "scripts.benchmark:main"
latence-labels    = "scripts.generate_labels:main"
latence-export    = "scripts.export_onnx:main"

[tool.hatch.build.targets.wheel]
packages = ["latence"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
